--- a/aboutme/index.html
+++ b/aboutme/index.html
@@ -35,6 +35,8 @@
 
 	<!-- Custom styles CSS -->
 	<link href="../assets/css/style.css" rel="stylesheet" media="screen">
+	
+	<link rel="shortcut icon" href="../favicon2.png">  
 
 	
 </head>
@@ -63,7 +65,7 @@
 					<ul class="nav navbar-nav navbar-right">
 				
 						<li><a href="../">PORTFOLIO</a></li>
-						<li><a style="color:#49e2d6" href="/">ABOUT ME</a></li>
+						<li><a style="color:#F79023" href="/">ABOUT ME</a></li>
 	
 						<li><a href="../resume">RESUME</a></li>
 					</ul>
