--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
 	<!-- Custom styles CSS -->
 	<link href="assets/css/style.css" rel="stylesheet" media="screen">
 
+	<link rel="shortcut icon" href="favicon2.png">  
+
 	
 </head>
 <body>
@@ -74,7 +76,7 @@
 				<div class="collapse navbar-collapse" id="custom-collapse">
 					<ul class="nav navbar-nav navbar-right">
 				
-						<li><a style="color:#49e2d6" href="/">PORTFOLIO</a></li>
+						<li><a style="color:#F79023" href="/">PORTFOLIO</a></li>
 						<li><a href="aboutme">ABOUT ME</a></li>
 	
 						<li><a href="resume">RESUME</a></li>
