--- a/resume/index.html
+++ b/resume/index.html
@@ -36,6 +36,8 @@
 	<!-- Custom styles CSS -->
 	<link href="../assets/css/style.css" rel="stylesheet" media="screen">
 
+	<link rel="shortcut icon" href="../favicon2.png">  
+
 	
 </head>
 <body>
@@ -64,7 +66,7 @@
 						<li><a href="../">PORTFOLIO</a></li>
 						<li><a href="../aboutme">ABOUT ME</a></li>
 	
-						<li><a style="color:#49e2d6" href="/">RESUME</a></li>
+						<li><a style="color:#F79023" href="/">RESUME</a></li>
 					</ul>
 				</div>
 
