--- a/blockedonline/index.html
+++ b/blockedonline/index.html
@@ -35,6 +35,7 @@
 
 	<!-- Custom styles CSS -->
 	<link href="../assets/css/style.css" rel="stylesheet" media="screen">
+	<link rel="shortcut icon" href="../favicon2.png">  
 	
 </head>
 <body>
