--- a/brainstorming/index.html
+++ b/brainstorming/index.html
@@ -33,6 +33,7 @@
 
 	<!-- Custom styles CSS -->
 	<link href="../assets/css/style.css" rel="stylesheet" media="screen">
+	<link rel="shortcut icon" href="../favicon2.png">   
 
 	
 </head>
