--- a/research/index.html
+++ b/research/index.html
@@ -36,6 +36,8 @@
 	<!-- Custom styles CSS -->
 	<link href="../assets/css/style.css" rel="stylesheet" media="screen">
 
+	<link rel="shortcut icon" href="../favicon2.png">  
+
 
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
 <script src="../sss/sss.min.js"></script>
