--- a/walle/index.html
+++ b/walle/index.html
@@ -35,7 +35,7 @@
 
 	<!-- Custom styles CSS -->
 	<link href="../assets/css/style.css" rel="stylesheet" media="screen">
-
+<link rel="shortcut icon" href="../favicon2.png">  
 	<style>
 
  canvas {
