--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
 		<div class="col-sm-12 text-center">
 
 <div class="btn-list">
-<a href="mailto:ayakhina@wellesley.edu" class="btn btn-custom-4">ayakhina@wellesley.edu</a>. </div>
+<a href="mailto:ayakhina@wellesley.edu" class="btn btn-custom-4">ayakhina@wellesley.edu</a> </div>
 
 </div>
 </div>
