--- a/brainstorming/index.html
+++ b/brainstorming/index.html
@@ -286,6 +286,16 @@
 
 	<!-- Services start -->
 
+<div class="popup-content5">
+		<div class="row">
+		<div class="col-sm-12 text-center">
+
+<div class="btn-list">
+<a href="mailto:ayakhina@wellesley.edu" class="btn btn-custom-4">ayakhina@wellesley.edu</a> </div>
+
+</div>
+</div>
+</div>
 
 
 
