--- a/arcelik/index.html
+++ b/arcelik/index.html
@@ -61,7 +61,7 @@
 					<ul class="nav navbar-nav navbar-right">
 				
 						<li><a href="../">PORTFOLIO</a></li>
-						<li><a href="../about">ABOUT ME</a></li>
+						<li><a href="../aboutme">ABOUT ME</a></li>
 	
 						<li><a href="../resume">RESUME</a></li>
 					</ul>
@@ -191,7 +191,7 @@
 			<div class="col-sm-12">
 
 				<div class="popup-header">
-					<h3 class="popup-title">Field research</h3>
+					<h3 class="popup-title">Field Research</h3>
 					
 				</div>
 
@@ -608,6 +608,16 @@
 
 	<!-- Services start -->
 
+<div class="popup-content5">
+		<div class="row">
+		<div class="col-sm-12 text-center">
+
+<div class="btn-list">
+<a href="mailto:ayakhina@wellesley.edu" class="btn btn-custom-4">ayakhina@wellesley.edu</a> </div>
+
+</div>
+</div>
+</div>
 
 
 
