--- a/studyspot/index.html
+++ b/studyspot/index.html
@@ -465,6 +465,16 @@ Based on the interviews, we’ve come up with potential tasks that users might h
 
 	<!-- Services start -->
 
+<div class="popup-content5">
+		<div class="row">
+		<div class="col-sm-12 text-center">
+
+<div class="btn-list">
+<a href="mailto:ayakhina@wellesley.edu" class="btn btn-custom-4">ayakhina@wellesley.edu</a> </div>
+
+</div>
+</div>
+</div>
 
 
 
