--- a/brainstorming/index.html
+++ b/brainstorming/index.html
@@ -129,7 +129,7 @@
 		</div><!-- .col -->
 	</div>
 
-<div class ="popup-content">
+<div class="popup-contentBtnPar">
 <div class="row">
 <div class="col-sm-12">
 <p>
@@ -149,7 +149,7 @@
 		</div><!-- .col -->
 	</div>
 
-	<div class ="popup-content">
+<div class="popup-contentBtnPar">
 <div class="row">
 <div class="col-sm-12">
 <p>
@@ -286,7 +286,7 @@
 
 	<!-- Services start -->
 
-<div class="popup-content5">
+<div class="popup-contentBut">
 		<div class="row">
 		<div class="col-sm-12 text-center">
 
@@ -299,9 +299,6 @@
 
 
 
-	<!-- Google Map start-->
-	<div id="footerType">
-	</div>
 
 	<section id="map-section">
 
