--- a/research/index.html
+++ b/research/index.html
@@ -155,7 +155,7 @@ $('.slider').sss();
 	</div><!-- .row -->
 
 
-	<div class="popup-content">
+	<div class="popup-contentBtnPar">
 
 <div class="row">
 			<div class="col-sm-12">
@@ -176,11 +176,11 @@ $('.slider').sss();
 
 
 
-	<div class="popup-content">
+	<div class="popup-contentBtnPar">
 
 <div class="row">
 			<div class="col-sm-12">
-				<p>The example use case employed for the purpose of the prototype, is purchasing furniture and composing a room layout with the help of a design expert. I designed the following wireframes for future prototype iterations. I researched various trends in 3D interfaces and explored the use of layers communicate the menu hierarchy and make search for items simple and quick.
+				<p>The example use case employed for the purpose of the prototype, is purchasing furniture and composing a room layout with the help of a design expert. I designed the following wireframes for future prototype iterations. I researched various trends in 3D interfaces and explored the use of layers to communicate the menu hierarchy and make search for items simple and quick.
 </p>
 
 				<p>Click on the arrows to see some wireframes that give an idea of what the interaction looks like.</p>				
@@ -323,7 +323,7 @@ $('.slider').sss();
 
 	<!-- Services start -->
 
-<div class="popup-content5">
+<div class="popup-contentBut">
 		<div class="row">
 		<div class="col-sm-12 text-center">
 
@@ -334,11 +334,6 @@ $('.slider').sss();
 </div>
 </div>
 
-
-
-	<!-- Google Map start-->
-	<div id="footerType">
-	</div>
 
 	<section id="map-section">
 
