--- a/resume/index.html
+++ b/resume/index.html
@@ -83,12 +83,12 @@
 
 <div id="custom-content" class="white-popup-block" width = "612">
 
-<div class="popup-content5">
+<div class="popup-contentBut">
 		<div class="row">
 		<div class="col-sm-12 text-center">
 
 <div class="btn-list">
-<a href="AsiyaYakhinaResume.pdf" download class="btn btn-custom-4">Download as PDF</a>
+<a href="../AsiyaYakhinaResume.pdf" download class="btn btn-custom-4">Download as PDF</a>
 </div>
 
 </div>
@@ -218,7 +218,7 @@
 	<!-- Services start -->
 
 
-<div class="popup-content5">
+<div class="popup-contentBut">
 		<div class="row">
 		<div class="col-sm-12 text-center">
 
@@ -228,11 +228,6 @@
 </div>
 </div>
 </div>
-
-
-	<!-- Google Map start-->
-	<div id="footerType">
-	</div>
 
 	<section id="map-section">
 
