--- a/walle/index.html
+++ b/walle/index.html
@@ -40,8 +40,8 @@
 
  canvas {
     display: block;
-    margin: 10px auto;
-    width: 70%;
+    margin: 40px auto;
+    width: 80%;
     height: 750px;
   }
   </style>
@@ -106,7 +106,21 @@
 
 
 <div id="custom-content" class="white-popup-block">
-<div class="popup-content4">
+
+
+<div class="row">
+    <div class="col-sm-12 text-center">
+
+      <!-- Put your image here -->
+
+      <img src="walleCover.png" alt="">
+
+    </div><!-- .col -->
+  </div><!-- .row -->
+
+
+
+<div class="popup-content500">
 		<div class="row">
 
 			<div class="col-sm-12">
@@ -327,13 +341,14 @@ function render() {
  </div>
 
 
-<div class="popup-content4" class="white-popup-block">
+
+<div class="popup-content020" class="white-popup-block">
 		<div class="row">
 
 			<div class="col-sm-12">
 
 				<div class="popup-header">
-					<h3 class="popup-title">Modelling</h3>
+					<h4 class="popup-title">Modelling</h4>
 				</div>
 				</div>
 </div>
@@ -353,22 +368,14 @@ function render() {
 </div>
 </div>
 
-</div>
 
 
-	<div class="row">
-		<div class="col-sm-12 text-center">
-			<img src="allModels.png" alt="">
-
-		</div><!-- .col -->
-	</div><!-- .row -->
 
 
-<div class="popup-content2">
 		<div class="row">
 			<div class="col-sm-12">
-				<div class="popup-header">
-					<h3 class="popup-title">Texture Mapping</h3>
+	<div class="headerUnderText">
+					<h4 class="popup-title">Texture Mapping</h4>
 				</div>
 			</div>
 		</div>
@@ -379,11 +386,28 @@ function render() {
 				<p> I mapped various kinds of metallic textures on Wall-E's parts to achieve a similar kind of grunge feel of his character that the viewers witness in the original film.</p>
 </div>
 		</div>
+  </div>
+
+  <div class="row">
+    <div class="col-sm-12 text-center">
+
+      <!-- Put your image here -->
+
+      <img src="textures.png" alt="">
+
+    </div><!-- .col -->
+  </div><!-- .row -->
+
+
+
+
+
+  <div class="popup-content0">
 
 <div class="row">
 			<div class="col-sm-12">
-				<div class="popup-header">
-					<h3 class="popup-title">Animation</h3>
+			<div class="headerUnderText">
+					<h4 class="popup-title">Animation</h4>
 				</div>
 			</div>
 		</div>
@@ -401,11 +425,11 @@ function render() {
 <div class="col-sm-12">
 <p>Interact with the scene by hovering over it zoom in r out, and dragging the cursor on the scene.</p>
 
-<p>Press <em>g</em> to start the animation.</p>
+<b><p>Press <em>g</em> to start the animation.</p>
 
 <p>Press <em>s</em> to stop the animation.</p>
 
-<p>Press <em>0</em> to restart the animation.</p>
+<p>Press <em>0</em> to restart the animation.</p></b>
 </div>
 
 </div>
