--- a/aboutme/index.html
+++ b/aboutme/index.html
@@ -107,13 +107,15 @@
 								My interests lie in designing user interfaces and experiences. I also love playing and making games. Last summer, I worked as a UX designer on a game at Microsoft and learned a lot in the process. I’ll tell you more about it as soon as it gets shipped :)
 							</p>
 
-						</div>
-					</div>
-
-							<div class="module-subtitle2" id="blue">
+					
+							<p style="color:#F79023">
 
 							I believe that design is the art of storytelling and usability. A good story comes from pure creative effort. Usability is achieved through extensive testing. I personally worship both of these design stages and consider them critically important in any project.
-						</div>
+					</p>
+
+
+	</div>
+					</div>
 
 						</div>
 					</div>
@@ -126,7 +128,7 @@
 			<div class="col-sm-12">
 
 				<div class="popup-headerWork">
-					<h2 class="popup-title">More Work</h2>
+					<h2 class="popup-title">My Work</h2>
 				</div>
 			</div>
 		</div>
@@ -230,7 +232,7 @@
 </div>
 
 	<!-- Services start -->
-<div class="popup-content5">
+<div class="popup-contentBut">
 		<div class="row">
 		<div class="col-sm-12 text-center">
 
@@ -243,10 +245,6 @@
 
 
 
-
-	<!-- Google Map start-->
-	<div id="footerType">
-	</div>
 
 	<section id="map-section">
 
