--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 	<!-- Portfolio start -->
 
 	<section id="portfolio" class="module paddingb-none">
-		<div class="container">
+		<div class="container" style="text-align: center" id="homeLabel">
 			<div class="row">
 
 				<div class="col-sm-12">
@@ -132,7 +132,7 @@
 					<figcaption>
 						<a href="studyspot"></a>
 						<div class="caption-inner">
-							<h3 class="portfolio-item-title">iPhone App Design + Development </h3>
+							<h3 class="portfolio-item-title">iPhone App Design + Development</h3>
 							<div class="portfolio-item-desc">Helping students find their perfect study spot</div>
 						</div>
 					</figcaption>
@@ -221,7 +221,7 @@
 	<!-- Services start -->
 
 
-<div class="popup-content5">
+<div class="popup-contentBut">
 		<div class="row">
 		<div class="col-sm-12 text-center">
 
@@ -235,8 +235,7 @@
 
 
 	<!-- Google Map start-->
-	<div id="footerType">
-	</div>
+
 
 	<section id="map-section">
 
@@ -271,7 +270,7 @@
 	<script src="assets/js/jquery.sticky.js"></script>
 	
 	<script src="assets/js/wow.min.js"></script>
-	<!-- Google Maps -->
+	
 	<script src="http://maps.google.com/maps/api/js?sensor=true"></script>
 	<script src="assets/js/gmaps.js"></script>
 	<!-- Custom scripts -->
