--- a/aboutme/index.html
+++ b/aboutme/index.html
@@ -217,7 +217,7 @@
 					<figcaption>
 						<a href="../walle"></a>
 						<div class="caption-inner">
-							<h3 class="portfolio-item-title">3D Modelling</h3>
+							<h3 class="portfolio-item-title">Playground</h3>
 							<div class="portfolio-item-desc">Recreating Wall-E in Three.js</div>
 						</div>
 					</figcaption>
