--- a/studyspot/index.html
+++ b/studyspot/index.html
@@ -449,7 +449,7 @@ Based on the interviews, we’ve come up with potential tasks that users might h
 					<figcaption>
 						<a href="../walle"></a>
 						<div class="caption-inner">
-							<h4 class="portfolio-item-title">3D Modelling</h4>
+							<h4 class="portfolio-item-title">Playground</h4>
 							<div class="portfolio-item-desc">Recreating Wall-E in Three.js</div>
 						</div>
 					</figcaption>
