--- a/arcelik/index.html
+++ b/arcelik/index.html
@@ -593,7 +593,7 @@
 					<figcaption>
 						<a href="../walle"></a>
 						<div class="caption-inner">
-							<h4 class="portfolio-item-title">3D Modelling</h4>
+							<h4 class="portfolio-item-title">Playground</h4>
 							<div class="portfolio-item-desc">Recreating Wall-E in Three.js</div>
 						</div>
 					</figcaption>
