--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
 				<ul class="portfolio-items-container">
 
-					<li class="portfolio-item" data-groups="all slideshow">
+					<li class="portfolio-item" data-groups="all slideshow" onclick="location.href='studyspot';">
 						<figure>
 							<img src="assets/images/studySpot/studySpotTile.png" alt="">
 							<figcaption>
@@ -173,7 +173,7 @@
 						</figure>
 					</li>
 
-					<li class="portfolio-item" data-groups="all slideshow">
+					<li class=n junyyhyhh yhhy"portfolio-item" data-groups="all slideshow">
 						<figure>
 							<img src="assets/images/brainstorming/brainst.png" alt="">
 							<figcaption>
