--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 		</header>
 
 		<!-- Navigation end -->
-		<div class="portfolio-cont">
+	
 			<!-- Portfolio start -->
 			<section id="portfolio" class="module paddingb-none">
 				<div class="container" style="text-align: center" id="homeLabel">
@@ -116,96 +116,100 @@
 
 				</div><!-- .contaier -->
 
-				<ul class="portfolio-items-container">
+			<ul class="portfolio-items-container">
 
-					<li class="portfolio-item" data-groups="all slideshow" onclick="location.href='studyspot';">
-						<figure>
-							<img src="assets/images/studySpot/studySpotTile.png" alt="">
-							<figcaption>
-								<a href="studyspot"></a>
-								<div class="caption-inner">
-									<h3 class="portfolio-item-title">iPhone App Design + Development</h3>
-									<div class="portfolio-item-desc">Helping students find their perfect study spot</div>
-								</div>
-							</figcaption>
-						</figure>
-					</li>
+			
 
-					<li class="portfolio-item" data-groups="all video">
-						<figure>
-							<img src="assets/images/arcelik/istiklalTile.png" alt="">
-							<figcaption>
-								<a href="arcelik"></a>
-								<div class="caption-inner">
-									<h3 class="portfolio-item-title">Experience Design</h3>
-									<div class="portfolio-item-desc">Rethinking retail experience for millennials</div>
-								</div>
-							</figcaption>
-						</figure>
-					</li>
+	<li class="portfolio-item" data-groups="all slideshow" onclick="location.href='studyspot';">
+				<figure>
+					<img src="assets/images/studySpot/studySpotTile.png" onclick="location.href='studyspot';" alt="">
+					<figcaption>
+						<a href="studyspot"></a>
+						<div class="caption-inner">
+							<h4 class="portfolio-item-title">iPhone App Design + Development </h4>
+							<div class="portfolio-item-desc">Helping students find their perfect study spot</div>
+						</div>
+					</figcaption>
+				</figure>
+			</li>
 
+			<li class="portfolio-item" data-groups="all video">
+				<figure>
+					<img src="assets/images/arcelik/istiklalTile.png" alt="">
+					<figcaption>
+						<a href="arcelik"></a>
+						<div class="caption-inner">
+							<h4 class="portfolio-item-title">Experience Design</h4>
+							<div class="portfolio-item-desc">Rethinking retail experience for millennials</div>
+						</div>
+					</figcaption>
+				</figure>
+			</li>
 
+			
 
-					<li class="portfolio-item" data-groups="all video">
-						<figure>
-							<img src="assets/images/blockedOnline/blockedOnlineTile-01.png" alt="">
-							<figcaption>
-								<a href="blockedonline"></a>
-								<div class="caption-inner">
-									<h3 class="portfolio-item-title">Web Design</h3>
-									<div class="portfolio-item-desc">Blocked Online: Unveiling internet censorship</div>
-								</div>
-							</figcaption>
-						</figure>
-					</li>
+			<li class="portfolio-item" data-groups="all video">
+				<figure>
+					<img src="assets/images/blockedOnline/blockedOnlineTile-01.png" alt="">
+					<figcaption>
+						<a href="blockedonline"></a>
+						<div class="caption-inner">
+							<h4 class="portfolio-item-title">Web Design</h4>
+							<div class="portfolio-item-desc">Blocked Online: Unveiling internet censorship</div>
+						</div>
+					</figcaption>
+				</figure>
+			</li>
 
-					<li class="portfolio-item" data-groups="all image">
-						<figure>
-							<img src="assets/images/VRtile.jpg" alt="">
-							<figcaption>
-								<a href="research"></a>
+			<li class="portfolio-item" data-groups="all image">
+				<figure>
+					<img src="assets/images/VRtile.jpg" alt="">
+					<figcaption>
+						<a href="research"></a>
+						
+						<div class="caption-inner">
+							<h4 class="portfolio-item-title">Research + Prototype Design</h4>
+							<div class="portfolio-item-desc">Exploring collaborative spatial design <br>in a virtual environment</div>
+						
+					</a>
+					</figcaption>
+				</figure>
+			</li>
 
-								<div class="caption-inner">
-									<h3 class="portfolio-item-title">Research + Prototype Design</h3>
-									<div class="portfolio-item-desc">Exploring collaborative spatial design <br>in a virtual environment</div>
-								</div>
-							</figcaption>
-						</figure>
-					</li>
+			<li class="portfolio-item" data-groups="all slideshow">
+				<figure>
+					<img src="assets/images/brainstorming/brainst.png" alt="">
+					<figcaption>
+						<a href="brainstorming"></a>
+						<div class="caption-inner">
+							<h4 class="portfolio-item-title">Brainstorm Facilitation</h4>
+							<div class="portfolio-item-desc">Using design thinking principles<br>
+								to lead creative ideation meetings</div>
+						</div>
+					</figcaption>
+				</figure>
+			</li>
 
-					<li class=n junyyhyhh yhhy"portfolio-item" data-groups="all slideshow">
-						<figure>
-							<img src="assets/images/brainstorming/brainst.png" alt="">
-							<figcaption>
-								<a href="brainstorming"></a>
-								<div class="caption-inner">
-									<h3 class="portfolio-item-title">Brainstorm Facilitation</h3>
-									<div class="portfolio-item-desc">Using design thinking principles<br>
-										to lead creative ideation meetings</div>
-									</div>
-								</figcaption>
-							</figure>
-						</li>
+		
 
+			<li class="portfolio-item" data-groups="all image">
+				<figure>
+					<img src="assets/images/walle/wallEcolver.png" alt="">
+					<figcaption>
+						<a href="walle"></a>
+						<div class="caption-inner">
+							<h4 class="portfolio-item-title">Playground</h4>
+							<div class="portfolio-item-desc">Recreating Wall-E in Three.js</div>
+						</div>
+					</figcaption>
+				</figure>
+			</li>
 
+		</ul><!-- .projects-container -->
 
-						<li class="portfolio-item" data-groups="all image">
-							<figure>
-								<img src="assets/images/walle/wallEcolver.png" alt="">
-								<figcaption>
-									<a href="walle"></a>
-									<div class="caption-inner">
-										<h3 class="portfolio-item-title">Playground</h3>
-										<div class="portfolio-item-desc">Recreating Wall-E in Three.js</div>
-									</div>
-								</figcaption>
-							</figure>
-						</li>
-
-					</ul><!-- .projects-container -->
 
 				</section>
-			</div>
+	
 			<!-- Services start -->
 
 
