--- a/index.html
+++ b/index.html
@@ -117,9 +117,6 @@
 				</div><!-- .contaier -->
 
 			<ul class="portfolio-items-container">
-
-			
-
 	<li class="portfolio-item" data-groups="all slideshow" onclick="location.href='studyspot';">
 				<figure>
 					<img src="assets/images/studySpot/studySpotTile.png" onclick="location.href='studyspot';" alt="">
@@ -211,19 +208,15 @@
 				</section>
 	
 			<!-- Services start -->
+<div class="popup-contentBut">
+		<div class="row">
+		<div class="col-sm-12 text-center">
 
 
-			<div class="popup-contentBut">
-				<div class="row">
-					<div class="col-sm-12 text-center">
+<a href="mailto:ayakhina@wellesley.edu" class="btn btn-custom-4">ayakhina@wellesley.edu</a> </div>
 
-						<div class="btn-list">
-							<a href="mailto:ayakhina@wellesley.edu" class="btn btn-custom-4">ayakhina@wellesley.edu</a> 
-						</div>
-
-					</div>
-				</div>
-			</div>
+</div>
+</div>
 
 
 
