--- a/aboutme/index.html
+++ b/aboutme/index.html
@@ -95,7 +95,7 @@
 		</div><!-- .col -->
 	</div><!-- .row -->
 						
-						<div class ="popup-content">
+						<div class ="popup-content200">
 							<div class="row">
 
 					<div class="col-sm-12" text = "center">
