--- a/resume/index.html
+++ b/resume/index.html
@@ -112,7 +112,7 @@
 			<div class="col-sm-12">
 
 				<div class="popup-headerWork">
-					<h2 class="popup-title">More Work</h2>
+					<h2 class="popup-title">My Work</h2>
 				</div>
 			</div>
 		</div>
