--- a/aboutme/index.html
+++ b/aboutme/index.html
@@ -100,7 +100,7 @@
 
 					<div class="col-sm-12" text = "center">
 						<p>
-								I’m graduating with Bachelors in Media Arts and Sciences in Spring of 2016. My major uniquely combines classes in computer science, design, and art. This training has enabled me to participate in all stages of design process, complete multiple projects from start to finish, and collaborate effectively in interdisciplinary teams.
+								I’m graduating with Bachelors in Media Arts and Sciences from Wellesley College in Spring of 2016. My degree uniquely combines classes in computer science, design, and art. This training has enabled me to participate in all stages of design process, complete multiple projects from start to finish, and collaborate effectively in interdisciplinary teams.
 							</p>
 
 							<p>
