--- a/studyspot/index.html
+++ b/studyspot/index.html
@@ -194,7 +194,7 @@ Based on the interviews, we’ve come up with potential tasks that users might h
 		</div><!-- .col -->
 	</div>
 
-<div class="popup-content0">
+<div class="popup-content020">
 <div class="row">
 
 			<div class="col-sm-12">
@@ -367,17 +367,14 @@ Based on the interviews, we’ve come up with potential tasks that users might h
 
 
 
-		<ul class="portfolio-items-container">
-
-			
-
+	<ul class="portfolio-items-container">
 	<li class="portfolio-item" data-groups="all slideshow">
 				<figure>
-					<img src="../assets/images/studySpot/studySpotTile.png" alt="">
+					<img src="../assets/images/studySpot/studySpotTile.png">
 					<figcaption>
 						<a href="../studyspot"></a>
 						<div class="caption-inner">
-							<h4 class="portfolio-item-title">iPhone App Design + Development </h4>
+							<h4 class="portfolio-item-title">iPhone app design + development</h4>
 							<div class="portfolio-item-desc">Helping students find their perfect study spot</div>
 						</div>
 					</figcaption>
@@ -441,25 +438,75 @@ Based on the interviews, we’ve come up with potential tasks that users might h
 				</figure>
 			</li>
 
-		
 
 			<li class="portfolio-item" data-groups="all image">
+				<figure>
+					<img src="../assets/images/lastdinosaur/dinoTile1.png" alt="">
+					<figcaption>
+						<a href="../lastdinosaur"></a>
+						<div class="caption-inner">
+							<h4 class="portfolio-item-title">Game design + development</h4>
+							<div class="portfolio-item-desc">Save the dinosaur from extinction</div>
+						</div>
+					</figcaption>
+				</figure>
+			</li>
+
+
+</ul>
+
+
+						
+			<div class="popup-content3030" style="text-align: center">
+						<div class="row">
+			<div class="col-sm-12">
+					<h5 class="popup-title">Side projects</h5>
+				</div>
+			</div>
+		</div>
+
+		<ul class="portfolio-items-container">
+					<li class="portfolio-item" data-groups="all image">
 				<figure>
 					<img src="../assets/images/walle/wallEcolver.png" alt="">
 					<figcaption>
 						<a href="../walle"></a>
 						<div class="caption-inner">
-							<h4 class="portfolio-item-title">Playground</h4>
+							<h4 class="portfolio-item-title">3D modelling</h4>
 							<div class="portfolio-item-desc">Recreating Wall-E in Three.js</div>
 						</div>
 					</figcaption>
 				</figure>
 			</li>
 
-		</ul><!-- .projects-container -->
+	<li class="portfolio-item" data-groups="all image">
+				<figure>
+					<img src="../assets/images/ircj/ircjProjTile.png" alt="">
+					<figcaption>
+						<a href="../ircj"></a>
+						<div class="caption-inner">
+							<h4 class="portfolio-item-title">Graphic + Print Design</h4>
+							<div class="portfolio-item-desc">Designing the layout for IRC journal at Wellesley College</div>
+						</div>
+					</figcaption>
+				</figure>
+			</li>
 
-	<!-- Portfolio end -->
-</div>
+
+	<li class="portfolio-item" data-groups="all image">
+				<figure>
+					<img src="../assets/images/vrTour/towerCourt600.png" alt="">
+					<figcaption>
+						<a href="../wellesleytour"></a>
+						<div class="caption-inner">
+							<h4 class="portfolio-item-title">VR Tour Development</h4>
+							<div class="portfolio-item-desc">Recreating a corner of Wellesley campus in Unity3D</div>
+						</div>
+					</figcaption>
+				</figure>
+			</li>
+
+		</ul><!-- .projects-container -->
 
 	<!-- Services start -->
 
