--- a/resume/index.html
+++ b/resume/index.html
@@ -88,7 +88,7 @@
 		<div class="col-sm-12 text-center">
 
 
-<a href="../AsiyaYakhinaResume.pdf" download class="btn btn-custom-4">Download as PDF</a>
+<a href="AsiyaYakhinaResume.pdf" download class="btn btn-custom-4">Download as PDF</a>
 
 
 </div>
