--- a/resume/index.html
+++ b/resume/index.html
@@ -98,7 +98,7 @@
 	<div class="row">
 		<div class="col-sm-12 text-center">
 
-<iframe src="https://drive.google.com/a/wellesley.edu/file/d/0B2JiRZFlJu33OHpjYTFHV2wwckU/preview" frameborder="0" style="overflow:hidden;height:792;width:100%" height="792" width="100%"></iframe>
+<iframe src="AsiyaYakhinaResume.pdf" height="792" width="100%"></iframe>
 		
 		</div>
 		</div>
