cleaning up html and js

--- a/walle/AboutMe.html
+++ b/walle/AboutMe.html
@@ -1,265 +1,200 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="">
-	<meta name="author" content="">
-
-
-	<title>Asiya Yakhina</title>
-
-	<!-- CSS -->
-	<!-- Bootstrap core CSS -->
-	<link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
-
-	<!-- Font Awesome CSS -->
-	<link href="assets/css/font-awesome.min.css" rel="stylesheet" media="screen">
-
-	<!-- Elegant icons CSS -->
-	<link href="assets/css/simple-line-icons.css" rel="stylesheet" media="screen">
-
-	<!--[if lte IE 7]>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <title>Asiya Yakhina</title>
+    <!-- CSS -->
+    <!-- Bootstrap core CSS -->
+    <link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
+    <!-- Font Awesome CSS -->
+    <link href="assets/css/font-awesome.min.css" rel="stylesheet" media="screen">
+    <!-- Elegant icons CSS -->
+    <link href="assets/css/simple-line-icons.css" rel="stylesheet" media="screen">
+    <!--[if lte IE 7]>
 		<script src="assets/js/icons-lte-ie7.js"></script>
 	<![endif]-->
-
-	<!-- Magnific-popup lightbox -->
-	<link href="assets/css/magnific-popup.css" rel="stylesheet">
-
-	<!-- Owl Carousel -->
-	<link href="assets/css/owl.theme.css" rel="stylesheet">
-	<link href="assets/css/owl.carousel.css" rel="stylesheet">
-
-	<!-- Animate css -->
-	<link href="assets/css/animate.css" rel="stylesheet">
-
-	<!-- Custom styles CSS -->
-	<link href="assets/css/style.css" rel="stylesheet" media="screen">
-
-	
+    <!-- Magnific-popup lightbox -->
+    <link href="assets/css/magnific-popup.css" rel="stylesheet">
+    <!-- Owl Carousel -->
+    <link href="assets/css/owl.theme.css" rel="stylesheet">
+    <link href="assets/css/owl.carousel.css" rel="stylesheet">
+    <!-- Animate css -->
+    <link href="assets/css/animate.css" rel="stylesheet">
+    <!-- Custom styles CSS -->
+    <link href="assets/css/style.css" rel="stylesheet" media="screen">
 </head>
+
 <body>
-
-<div id="custom-content" class="white-popup-block">
-
-	<div class="row">
-		<div class="col-sm-12 text-center">
-
-			<!-- Put your image here -->
-
-			<img src="assets/images/brainstorming/brainstCover.png" alt="">
-
-		</div><!-- .col -->
-	</div><!-- .row -->
-
-	<div class="popup-content">
-		<div class="row">
-
-			<div class="col-sm-12">
-
-				<div class="popup-header">
-					<h2 class="popup-title">Brainstorm Facilitation</h2>
-					<div class="popup-subtitle">
-						Using design thinking principles to lead creative ideation meetings
-					</div>
-					<div class="popup-line"></div>
-				</div>
-
-				<p>During one of my semesters at <a href "http://mobile.mit.edu/">Mobile Experience Lab</a> at MIT, I organized brainstorming sessions for the lab members, as well as for outside clients such as <a href="http://www.generalsensing.com/#home-3">General Sensing</a> and <a href="http://www.jaguarusa.com/index.html">Jaguar</a>. I worked on creating an environment that is conducive to a productive ideation process by helping the participants engage in discussion, and get inspired by their surroundings and each other. I also designed complementary materials that informed the ideation process and helped bring all participants to the same page.</p>
-
-				<p>One type of material that we designed individually for various clients, is a value map. The purpose of this template is to 
-				help participants focus on the customer during the ideation process and document their ideas in a comprehensive readable form:
-				</p>
-
-
-
-			</div>
-
-		</div>
-
-
-</div>
-
-	<div class="row">
-		<div class="col-sm-12 text-center">
-
-			<!-- Put your image here -->
-
-			<img src="assets/images/brainStorming/valuemap.png" alt="">
-
-		</div><!-- .col -->
-	</div>
-
-<div class ="popup-content2">
-<div class="row">
-<div class="col-sm-12">
-<p>
-	After the participants are done brainstorming, they can use this presentation template to document a particular idea into a comprehensive report to be used during the presentation:
-</p>
-</div>
-</div>
-</div>
-
-<div class="row">
-		<div class="col-sm-12 text-center">
-
-			<!-- Put your image here -->
-
-			<img src="assets/images/brainStorming/template.png" alt="">
-
-		</div><!-- .col -->
-	</div>
-
-	<div class ="popup-content2">
-<div class="row">
-<div class="col-sm-12">
-<p>
-	We also designed 6x4" brainstorming cards designed to help participants cluster various entities such as potential customers, contexts, or technologies into situations or problems that need to be solved by their product:
-</p>
-</div>
-</div>
-</div>
-
-	
-<div class="row">
-		<div class="col-sm-12 text-center">
-
-			<!-- Put your image here -->
-
-			<img src="assets/images/brainStorming/cards.png" alt="">
-
-		</div><!-- .col -->
-	</div>
-
-
-</div>
-
-
-
-<section id="portfolio" class="module paddingb-none">
-
-
-		<ul class="portfolio-items-container">
-
-			
-
-	<li class="portfolio-item" data-groups="all slideshow">
-				<figure>
-					<img src="assets/images/studySpot/studySpotTile.png" alt="">
-					<figcaption>
-						<a href="StudySpot.html"></a>
-						<div class="caption-inner">
-							<h3 class="portfolio-item-title">IPhone App Design + Development </h3>
-							<div class="portfolio-item-desc">Helping students find their perfect study spot</div>
-						</div>
-					</figcaption>
-				</figure>
-			</li>
-
-			<li class="portfolio-item" data-groups="all video">
-				<figure>
-					<img src="assets/images/arcelik/istiklalTile.png" alt="">
-					<figcaption>
-						<a href="ArcelikTransformer.html"></a>
-						<div class="caption-inner">
-							<h3 class="portfolio-item-title">Experience Design</h3>
-							<div class="portfolio-item-desc">Rethinking retail experience for millennials</div>
-						</div>
-					</figcaption>
-				</figure>
-			</li>
-
-			
-
-			<li class="portfolio-item" data-groups="all video">
-				<figure>
-					<img src="assets/images/blockedOnline/blockedOnlineTile-01.png" alt="">
-					<figcaption>
-						<a href="BlockedOnline.html"></a>
-						<div class="caption-inner">
-							<h3 class="portfolio-item-title">Web Design</h3>
-							<div class="portfolio-item-desc">Blocked Online: Unveiling internet censorship</div>
-						</div>
-					</figcaption>
-				</figure>
-			</li>
-
-			<li class="portfolio-item" data-groups="all image">
-				<figure>
-					<img src="assets/images/VRtile.jpg" alt="">
-					<figcaption>
-						<a href="VRresearch.html"></a>
-						
-						<div class="caption-inner">
-							<h3 class="portfolio-item-title">VR Research</h3>
-							<div class="portfolio-item-desc">Exploring collaborative spatial design <br>in a virtual environment</div>
-						
-					</a>
-					</figcaption>
-				</figure>
-			</li>
-
-			<li class="portfolio-item" data-groups="all slideshow">
-				<figure>
-					<img src="assets/images/brainstorming/brainst.png" alt="">
-					<figcaption>
-						<a href="Brainstorming.html"></a>
-						<div class="caption-inner">
-							<h3 class="portfolio-item-title">Brainstorm Facilitation</h3>
-							<div class="portfolio-item-desc">Using design thinking principles<br>
-								to lead creative ideation meetings</div>
-						</div>
-					</figcaption>
-				</figure>
-			</li>
-
-		
-
-			<li class="portfolio-item" data-groups="all image">
-				<figure>
-					<img src="assets/images/walle/wallEcolver.png" alt="">
-					<figcaption>
-						<a href="walle/Walle.html"></a>
-						<div class="caption-inner">
-							<h3 class="portfolio-item-title">3D Modelling</h3>
-							<div class="portfolio-item-desc">Recreating Wall-E in THREE.js</div>
-						</div>
-					</figcaption>
-				</figure>
-			</li>
-
-		</ul><!-- .projects-container -->
-
-	</section>
-
-	<!-- Portfolio end -->
-	<div id="footerType">
-	</div>
-<section id="map-section">
-
-		<div id="map"></div>
-
-	</section>
-
-
-
-	<script src="assets/js/jquery-1.11.1.min.js"></script>
-	<script src="assets/bootstrap/js/bootstrap.min.js"></script>
-	<script src="assets/js/jquery.magnific-popup.min.js"></script>
-	<script src="assets/js/imagesloaded.pkgd.js"></script>
-	<script src="assets/js/jquery.shuffle.min.js"></script>
-	<script src="assets/js/twitterFetcher_min.js"></script>
-	<script src="assets/js/owl.carousel.min.js"></script>
-	<script src="assets/js/jquery.fitvids.js"></script>
-	<script src="assets/js/jquery.sticky.js"></script>
-	
-	<script src="assets/js/wow.min.js"></script>
-	<!-- Google Maps -->
-	<script src="http://maps.google.com/maps/api/js?sensor=true"></script>
-	<script src="assets/js/gmaps.js"></script>
-	<!-- Custom scripts -->
-	<script src="assets/js/custom.js"></script>
-	<script src="assets/js/custom-shuffle-init.js"></script>
-
+    <div id="custom-content" class="white-popup-block">
+        <div class="row">
+            <div class="col-sm-12 text-center">
+                <!-- Put your image here -->
+                <img src="assets/images/brainstorming/brainstCover.png" alt="">
+            </div>
+            <!-- .col -->
+        </div>
+        <!-- .row -->
+        <div class="popup-content">
+            <div class="row">
+                <div class="col-sm-12">
+                    <div class="popup-header">
+                        <h2 class="popup-title">Brainstorm Facilitation</h2>
+                        <div class="popup-subtitle">
+                            Using design thinking principles to lead creative ideation meetings
+                        </div>
+                        <div class="popup-line"></div>
+                    </div>
+                    <p>During one of my semesters at <a href "http://mobile.mit.edu/">Mobile Experience Lab</a> at MIT, I organized brainstorming sessions for the lab members, as well as for outside clients such as <a href="http://www.generalsensing.com/#home-3">General Sensing</a> and <a href="http://www.jaguarusa.com/index.html">Jaguar</a>. I worked on creating an environment that is conducive to a productive ideation process by helping the participants engage in discussion, and get inspired by their surroundings and each other. I also designed complementary materials that informed the ideation process and helped bring all participants to the same page.</p>
+                    <p>One type of material that we designed individually for various clients, is a value map. The purpose of this template is to help participants focus on the customer during the ideation process and document their ideas in a comprehensive readable form:
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-12 text-center">
+                <!-- Put your image here -->
+                <img src="assets/images/brainStorming/valuemap.png" alt="">
+            </div>
+            <!-- .col -->
+        </div>
+        <div class="popup-content2">
+            <div class="row">
+                <div class="col-sm-12">
+                    <p>
+                        After the participants are done brainstorming, they can use this presentation template to document a particular idea into a comprehensive report to be used during the presentation:
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-12 text-center">
+                <!-- Put your image here -->
+                <img src="assets/images/brainStorming/template.png" alt="">
+            </div>
+            <!-- .col -->
+        </div>
+        <div class="popup-content2">
+            <div class="row">
+                <div class="col-sm-12">
+                    <p>
+                        We also designed 6x4" brainstorming cards designed to help participants cluster various entities such as potential customers, contexts, or technologies into situations or problems that need to be solved by their product:
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-12 text-center">
+                <!-- Put your image here -->
+                <img src="assets/images/brainStorming/cards.png" alt="">
+            </div>
+            <!-- .col -->
+        </div>
+    </div>
+    <section id="portfolio" class="module paddingb-none">
+        <ul class="portfolio-items-container">
+            <li class="portfolio-item" data-groups="all slideshow">
+                <figure>
+                    <img src="assets/images/studySpot/studySpotTile.png" alt="">
+                    <figcaption>
+                        <a href="StudySpot.html"></a>
+                        <div class="caption-inner">
+                            <h3 class="portfolio-item-title">IPhone App Design + Development </h3>
+                            <div class="portfolio-item-desc">Helping students find their perfect study spot</div>
+                        </div>
+                    </figcaption>
+                </figure>
+            </li>
+            <li class="portfolio-item" data-groups="all video">
+                <figure>
+                    <img src="assets/images/arcelik/istiklalTile.png" alt="">
+                    <figcaption>
+                        <a href="ArcelikTransformer.html"></a>
+                        <div class="caption-inner">
+                            <h3 class="portfolio-item-title">Experience Design</h3>
+                            <div class="portfolio-item-desc">Rethinking retail experience for millennials</div>
+                        </div>
+                    </figcaption>
+                </figure>
+            </li>
+            <li class="portfolio-item" data-groups="all video">
+                <figure>
+                    <img src="assets/images/blockedOnline/blockedOnlineTile-01.png" alt="">
+                    <figcaption>
+                        <a href="BlockedOnline.html"></a>
+                        <div class="caption-inner">
+                            <h3 class="portfolio-item-title">Web Design</h3>
+                            <div class="portfolio-item-desc">Blocked Online: Unveiling internet censorship</div>
+                        </div>
+                    </figcaption>
+                </figure>
+            </li>
+            <li class="portfolio-item" data-groups="all image">
+                <figure>
+                    <img src="assets/images/VRtile.jpg" alt="">
+                    <figcaption>
+                        <a href="VRresearch.html"></a>
+                        <div class="caption-inner">
+                            <h3 class="portfolio-item-title">VR Research</h3>
+                            <div class="portfolio-item-desc">Exploring collaborative spatial design
+                                <br>in a virtual environment</div>
+                            </a>
+                    </figcaption>
+                </figure>
+            </li>
+            <li class="portfolio-item" data-groups="all slideshow">
+                <figure>
+                    <img src="assets/images/brainstorming/brainst.png" alt="">
+                    <figcaption>
+                        <a href="Brainstorming.html"></a>
+                        <div class="caption-inner">
+                            <h3 class="portfolio-item-title">Brainstorm Facilitation</h3>
+                            <div class="portfolio-item-desc">Using design thinking principles
+                                <br> to lead creative ideation meetings</div>
+                        </div>
+                    </figcaption>
+                </figure>
+            </li>
+            <li class="portfolio-item" data-groups="all image">
+                <figure>
+                    <img src="assets/images/walle/wallEcolver.png" alt="">
+                    <figcaption>
+                        <a href="walle/Walle.html"></a>
+                        <div class="caption-inner">
+                            <h3 class="portfolio-item-title">3D Modelling</h3>
+                            <div class="portfolio-item-desc">Recreating Wall-E in THREE.js</div>
+                        </div>
+                    </figcaption>
+                </figure>
+            </li>
+        </ul>
+        <!-- .projects-container -->
+    </section>
+    <!-- Portfolio end -->
+    <div id="footerType">
+    </div>
+    <section id="map-section">
+        <div id="map"></div>
+    </section>
+    <script src="assets/js/jquery-1.11.1.min.js"></script>
+    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="assets/js/jquery.magnific-popup.min.js"></script>
+    <script src="assets/js/imagesloaded.pkgd.js"></script>
+    <script src="assets/js/jquery.shuffle.min.js"></script>
+    <script src="assets/js/twitterFetcher_min.js"></script>
+    <script src="assets/js/owl.carousel.min.js"></script>
+    <script src="assets/js/jquery.fitvids.js"></script>
+    <script src="assets/js/jquery.sticky.js"></script>
+    <script src="assets/js/wow.min.js"></script>
+    <!-- Google Maps -->
+    <script src="http://maps.google.com/maps/api/js?sensor=true"></script>
+    <script src="assets/js/gmaps.js"></script>
+    <!-- Custom scripts -->
+    <script src="assets/js/custom.js"></script>
+    <script src="assets/js/custom-shuffle-init.js"></script>
 </body>
+
 </html>
