--- a/studyspot/index.html
+++ b/studyspot/index.html
@@ -230,7 +230,7 @@
                     <div class="headerUnderText">
                         <h4 class="popup-title">Implementation</h4>
                     </div>
-                    <p> After running user-tests and improving our designs, we started the front-end implementation. I took on the developer role and was responsible for most of the implementation and putting all snippets of code together. These are the screenshots of finished front-end of the app built with HTML, CSS, and jQuery:</p>
+                    <p> After running user-tests and improving our designs, we started the front-end implementation. I took on the developer role and was responsible for most of the implementation and putting all snippets of code together. These are the screenshots of finished front-end of the app built with HTML5, CSS, and jQuery:</p>
                 </div>
             </div>
         </div>
